--- a/web/css/fonts.css
+++ b/web/css/fonts.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&family=Kanit&display=swap');
 
 body {
     font-family: 'Chakra Petch', sans-serif;
+    /* font-family: 'Kanit', sans-serif; */
 }
