--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,9 +1,28 @@
 @keyframes blink {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .badge-blink {
-    animation: blink 1s infinite; /* Adjust the animation duration as needed */
+    animation: blink 1s infinite;
+    /* Adjust the animation duration as needed */
+}
+
+@media print {
+    .print-area {
+        display: block;
+    }
+
+    .non-printable {
+        display: none;
+    }
 }
